Fix bug 231280 (printing not honoring OS date format).  Patch by Constantine A. Murenin <cnst.bmo@bugmail.mojo.ru>, r=jshin, sr=roc, a=chofmann